<resources>
    <string name="app_name">周末动漫商城</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">搜索动漫周边商品/店铺</string>
    <string name="search">搜索</string>
    <string name="message">消息</string>
    <string name="sao">扫一扫</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="find">周末</string>
    <string name="shop_street">店铺街</string>
    <string name="shopping_car">购物车</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_order">我的订单</string>
    <string name="order_confirm">确认订单</string>
    <string name="order_list">订单列表</string>
    <string name="order_detail">订单详情</string>
    <string name="browse_history">浏览记录</string>
    <string name="ship_address">收货地址</string>
    <string name="xian_shi_te_you">限时特优</string>
    <string name="help">帮助中心</string>
    <string name="brand_page">品牌页面</string>
    <string name="you_hui_huo_dong">优惠活动</string>
    <string name="xian_shi">限时</string>
    <string name="miao_sha">秒杀</string>
    <string name="miao_sha_time">1天1时1分1秒</string>
    <string name="jing_pin_tui_jian">精品推荐</string>
    <string name="jing_ping_tui_jian_content">精品商品尽收眼底</string>
    <string name="more">更多</string>
    <string name="email">00000000@qq.com</string>
    <string name="zhou_mou_buy">ZHOUMOBUY周末</string>
    <string name="my_page">我的主页</string>
    <string name="my_shou_cang">我的收藏</string>
    <string name="guan_zhu_dian_pu">关注店铺</string>
    <string name="change_password">修改密码</string>
    <string name="setting">设置</string>
    <string name="shop_street_content">精品店铺一条街</string>
    <string name="cai_ni_xi_huan">猜你喜欢</string>
    <string name="ban_quan">"@2016ZMOBUY周末(zmobuy.com)版权所有，并保留所有权利"</string>
    <string name="wei_yi">卫衣</string>
    <string name="zhen_zhi_shan">针织衫</string>
    <string name="wai_tao">外套</string>
    <string name="t_xue">T恤</string>
    <string name="ming_xin_pian">明信片</string>
    <string name="da_li_bao">大礼包</string>
    <string name="pu_ke_pai">扑克牌</string>
    <string name="tai_li">台历</string>
    <string name="qian_bao">钱包</string>
    <string name="bi_ji_ben">笔记本</string>
    <string name="tong_ren_ka">AR同人卡</string>
    <string name="shou_ban">手办</string>
    <string name="mo_xing">模型</string>
    <string name="nothing">购物车什么都没有</string>
    <string name="qu_guang_guang">去逛逛</string>
    <string name="may_be_you_want">你可能想要</string>
    <string name="zhang_hao">账 号</string>
    <string name="zhang_hao_hint">用户名/手机号/邮箱</string>
    <string name="password">密 码</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="user_login">用户登录</string>
    <string name="new_user_zhu_ce">新用户注册</string>
    <string name="di_san_fang_deng_lu">第三方登录</string>
    <string name="qq">QQ</string>
    <string name="wei_bo">微博</string>
    <string name="wei_xin">微信</string>
    <string name="phone_register">手机注册</string>
    <string name="phone_kai_shi">+86</string>
    <string name="phone_num">手机号</string>
    <string name="inpu_yan_zheng_ma">请输入验证码</string>
    <string name="send_yan_zheng_ma">发送验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请重新输入密码</string>
    <string name="register">注册</string>
    <string name="have_registered_login">已注册直接登录</string>
    <string name="email_register">邮箱注册</string>
    <string name="user_name">用户名</string>
    <string name="input_email_number">请输入邮箱</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="find_password_by_phont_tips">为了您的安全，我们会向您的手机发送验证码</string>
    <string name="next_step">下一步</string>
    <string name="alse_find_by_email">您也可以通过邮箱找回</string>
    <string name="find_password_by_email_tips">为了您的安全，我们会向您的邮箱发送验证码</string>
    <string name="alse_find_by_phone">您也可以通过手机找回</string>
    <string name="your_email_address">您的邮箱地址：</string>
    <string name="please_input_email_yan_zheng_ma">请输入邮箱内收到的验证码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="confirm_change">确认修改</string>
    <string name="ke_fu">客服</string>
    <string name="add_to_shopping_car">加入购物车</string>
    <string name="buy_at_once">立即购买</string>
    <string name="zan_shi_que_huo">暂时缺货</string>
    <string name="product_detail">商品详情</string>
    <string name="shou_cang">收藏</string>
    <string name="market_price">市场价格:</string>
    <string name="xiao_liang">销量</string>
    <string name="ku_cun">当前库存</string>
    <string name="suo_zai_di_qu">所在地区</string>
    <string name="yun_fei">运费信息</string>
    <string name="yun_fei_price">运费</string>
    <string name="yi_xuan">已选</string>
    <string name="fu_wu">服务</string>
    <string name="zi_ying_fa_huo">由周末自营发货并提供售后服务</string>
    <string name="huo_dao_fu_kuan">货到付款</string>
    <string name="tui_huo">7天退货</string>
    <string name="ji_su_da">极速达</string>
    <string name="cha_kan_product_detail">查看商品详情</string>
    <string name="yong_hu_ping_jia">用户评价</string>
    <string name="hao_ping_lv">好评率</string>
    <string name="ren_ping_lun">人评论</string>
    <string name="you_tu_ping_jia">有图评价</string>
    <string name="quan_bu_ping_jia">全部评价</string>
    <string name="bao_kuan_xin_pin">爆款新品</string>
    <string name="lian_xi_ke_fu">联系客服</string>
    <string name="ling_qu_dian_pu_you_hui_quan">领取店铺优惠券（3）</string>
    <string name="li_ji_ling_qu">立即\n领取</string>
    <string name="you_hui_quan">优惠券</string>
    <string name="shi_yong_qi_xian">使用期限</string>
    <string name="man_yi_yuan_ke_yong">满1元可用</string>
    <string name="man_shi_yuan_ke_yong">满10元可用</string>
    <string name="yi_xuan_ku_cun">库存:</string>
    <string name="s_ma">S</string>
    <string name="m_ma">M</string>
    <string name="l_ma">L</string>
    <string name="xl_ma">XL</string>
    <string name="xxl_ma">XXL</string>
    <string name="xxxl_ma">XXXL</string>
    <string name="ci_ma">尺码</string>
    <string name="count">数量</string>
    <string name="fu_wu_shuo_ming">服务说明</string>
    <string name="huo_dao_fu_kuan_content">支持送货上门后再收款，支持现金，pos机刷卡等方式</string>
    <string name="tui_huo_content">自实际收货日期的次日起的7天内，商品完好，可进行无理由退换货</string>
    <string name="ji_su_da_content">上午下单，下午送达</string>
    <string name="product">商品</string>
    <string name="detail">详情</string>
    <string name="product_gui_ge">规格参数</string>
    <string name="gui_ge">规格</string>
    <string name="comment">评价</string>
    <string name="all_comment">全部评价</string>
    <string name="hao_comment">好评</string>
    <string name="zhong_comment">中评</string>
    <string name="cha_comment">差评</string>
    <string name="you_tu_comment">有图</string>
    <string name="ci_chu_wu_nei_rong">亲，此处没有内容-！</string>
    <string name="close">关闭</string>
    <string name="please_login_shou_cang">请登录后收藏该商品</string>
    <string name="qu_xiao">取消</string>
    <string name="li_ji_login">立即登陆</string>
    <string name="zi_ying_dian">自营店</string>
    <string name="ling_quan">领券</string>
    <string name="tui_jian_shang_ping">推荐商品</string>
    <string name="quan_xuan">全选</string>
    <string name="he_ji">合计:</string>
    <string name="bu_han_yun_fei">不含运费</string>
    <string name="bian_ji">编辑</string>
    <string name="jie_suan">结算</string>
    <string name="shu_ji">书籍</string>
    <string name="mo_wan">模玩 手办</string>
    <string name="diy">DIY定制</string>
    <string name="shang_zhuang">上装</string>
    <string name="xia_zhuang">下装</string>
    <string name="xiang_bao">箱包</string>
    <string name="zai_pin">宅品</string>
    <string name="mao_rong">毛绒</string>
    <string name="pei_shi">配饰</string>
    <string name="all_product">全部商品</string>
    <string name="new_product">新品</string>
    <string name="tui_jian">推荐</string>
    <string name="cu_xiao">促销</string>
    <string name="hot_product">热门商品</string>
    <string name="see_more">查看更多</string>
    <string name="shop_detail">店铺详情</string>
    <string name="re_men_fen_lei">热门分类</string>
    <string name="search_shop_product">搜索店内商品</string>
    <string name="zai_xian_ke_fu">在线客服</string>
    <string name="shop_er_wei_ma">店铺二维码</string>
    <string name="shang_jia_phone">商家电话</string>
    <string name="shop_desc">店铺简介</string>
    <string name="gong_si_name">公司名称</string>
    <string name="kai_dian_time">开店时间</string>
    <string name="suo_zai_area">所在地区</string>
    <string name="zong_he">综合</string>
    <string name="xin_pin">新品</string>
    <string name="price">价格</string>
    <string name="xiao_liang_mao_hao">销量:</string>
    <string name="ci_ma_mao_hao">尺码:</string>
    <string name="pei_song_fang_shi">配送方式</string>
    <string name="shang_jia_pei_song">商家配送</string>
    <string name="men_dian_zi_ti">门店自提</string>
    <string name="mian_yun_fei">免运费</string>
    <string name="mai_jia_liu_yan">买家留言（50字）</string>
    <string name="xuan_tian">选填</string>
    <string name="zhi_fu_fang_shi">支付方式</string>
    <string name="fa_piao_xin_xi">发票信息</string>
    <string name="shi_yong_ji_fen">本单可使用积分抵扣</string>
    <string name="product_sum_price">商品总价</string>
    <string name="use_you_hui_quan">使用优惠券</string>
    <string name="shi_fu_kuan">实付款</string>
    <string name="ti_jiao_ding_dan">提交订单</string>
    <string name="time">时间</string>
    <string name="zi_ti_dian">自提点</string>
    <string name="xin_zeng_shou_huo_ren_xin_xi">新增收货人信息</string>
    <string name="shou_huo_ren">收货人</string>
    <string name="phone">手机号码</string>
    <string name="xiang_xi_xin_xi">详细信息</string>
    <string name="save">保存</string>
    <string name="please_input_shou_huo_ren_name">请输入收货人姓名</string>
    <string name="please_input_phone">请输入联系电话</string>
    <string name="please_xuan_ze">请选择</string>
    <string name="xiang_xi_di_zhi">详细地址</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="pei_song_shi_jian">配送时间</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="zhi_fu_bao">支付宝</string>
    <string name="yu_e_zhi_fu">余额支付</string>
    <string name="fa_piao_tai_tou">发票抬头</string>
    <string name="fa_piao_content">发票内容</string>
    <string name="ming_xi">明细</string>
    <string name="please_input_ge_ren_huo_dan_wei_ming_cheng">可填写个人或单位名称</string>
    <string name="fu_kuan_jin_e">付款金额</string>
    <string name="ding_dan_hao">订单号</string>
    <string name="zhi_fu_bao_zhi_fu">支付宝支付</string>
    <string name="see_ding_dan">查看订单</string>
    <string name="yu_e_zhi_fu_successed">余额支付成功</string>
    <string name="all_ding_dan">全部订单</string>
    <string name="dai_fu_kuan">待付款</string>
    <string name="dai_shou_huo">待收货</string>
    <string name="dai_ping_jia">待评价</string>
    <string name="zhou_mo_zi_ying">周末自营</string>
    <string name="product_jin_e">商品金额</string>
    <string name="product_you_hui">商品优惠</string>
    <string name="cancel_order">取消订单</string>
    <string name="ying_fu_zong_e">应付总额</string>
    <string name="yu_e">余额</string>
    <string name="ji_fen">积分</string>
    <string name="ke_hu_fu_wu">客户服务</string>
    <string name="liu_lan_li_shi">浏览历史</string>
    <string name="guan_zhu">关注</string>
    <string name="zi_jin_guan_li">资金管理</string>
    <string name="qing_kong">清空</string>
    <string name="tou_xiang">头像</string>
    <string name="yong_hu_ming">用户名</string>
    <string name="xing_bie">性别</string>
    <string name="ka_hao">卡号</string>
    <string name="bank_ka_hao">银行卡号</string>
    <string name="chi_ka_ren">持卡人</string>
    <string name="chi_ka_ren_name">持卡人姓名</string>
    <string name="kai_hu_hang">开户行</string>
    <string name="kai_hu_hang_sample">如：工商银行武汉***支行</string>
    <string name="bank">银行</string>
    <string name="bank_sample">如：工商银行</string>
    <string name="ti_jiao">提交</string>
    <string name="fa_piao">发票</string>
    <string name="input_email">输入邮箱</string>
    <string name="find_password">找回密码</string>
</resources>