<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--卡号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ka_hao"/>
        <EditText
            android:id="@+id/edit_ka_hao_add_bank_card"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/bank_ka_hao"
            android:textSize="@dimen/add_bank_card_base_size"/>
    </LinearLayout>


    <!--持卡人-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chi_ka_ren"/>
        <EditText
            android:id="@+id/edit_chi_ka_ren_add_bank_card"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/chi_ka_ren_name"
            android:textSize="@dimen/add_bank_card_base_size"
            />
    </LinearLayout>


    <!--开户行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kai_hu_hang"/>
        <EditText
            android:id="@+id/edit_kai_hu_hang_add_bank_card"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/kai_hu_hang_sample"
            android:textSize="@dimen/add_bank_card_base_size"/>
    </LinearLayout>


    <!--银行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank"/>
        <EditText
            android:id="@+id/edit_bank_add_bank_card"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/bank_sample"
            android:textSize="@dimen/add_bank_card_base_size"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_ti_jiao_add_bank_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/bottom_lable_color"
        android:textColor="@color/white_my"
        android:text="@string/ti_jiao"/>



</LinearLayout>