<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--头部-->
   <!-- <RelativeLayout
        style="@style/dao_hang_relative_layout_style">
        <ImageView
            android:id="@+id/img_dao_hang_add_shou_huo_address"
            style="@style/dao_hang_img_style"/>
        <TextView
            android:text="@string/add_shou_huo_address"
            style="@style/dao_hang_text_style"
            />
    </RelativeLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/mo_kuai_backgroud">
        <!--收货人-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white_my"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shou_huo_ren"
                android:textColor="@color/myblack"/>
            <EditText
                android:id="@+id/edit_shou_huo_ren_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_shou_huo_ren_name"
                android:textSize="14sp"
                />
        </LinearLayout>


        <!--手机号码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="2dp"
            android:background="@color/white_my"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/myblack"/>
            <EditText
                android:id="@+id/edit_shou_huo_ren_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_phone"
                android:textSize="14sp"/>
        </LinearLayout>

        <!--所在地区-->
        <RelativeLayout
            android:id="@+id/re_layout_suo_zai_di_qu_add_shou_huo_ren_xin_xi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white_my"
            android:layout_marginTop="2dp">
            <TextView
                android:id="@+id/suo_zai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suo_zai_di_qu"
                android:textColor="@color/myblack"/>
            <TextView
                android:id="@+id/text_suo_zai_di_qu_add_xin_xi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_xuan_ze"
                android:layout_toRightOf="@id/suo_zai"
                android:layout_marginLeft="5dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/right"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>


        <!--详细信息-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="2dp"
            android:background="@color/white_my"
            android:text="@string/xiang_xi_xin_xi"
            android:textColor="@color/myblack"/>
        <EditText
            android:id="@+id/edit_xiang_xi_di_zhi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white_my"
            android:hint="@string/xiang_xi_di_zhi"
            android:textSize="14sp"/>

    </LinearLayout>

    <!--保存按钮-->
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/red_backgroud_yuan_jiao_button"
        android:text="@string/save"
        android:textColor="@color/white_my"/>


</LinearLayout>