<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_my">

    <!--头部-->
    <RelativeLayout
        style="@style/dao_hang_relative_layout_style">
        <ImageView
            android:id="@+id/img_dao_hang_change_by_phone"
            style="@style/dao_hang_img_style"/>
        <TextView
            android:text="@string/find_password"
            style="@style/dao_hang_text_style"
            />
    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <!--手机号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_kai_shi"
            android:textSize="@dimen/register_font_size"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            >
            <EditText
                android:id="@+id/edit_phone_num_find_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_phone_number"
                android:textSize="@dimen/find_password_font_size"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_password_by_phont_tips"
        android:textSize="16sp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <Button
        android:id="@+id/btn_next_step_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:textSize="@dimen/find_password_font_size"
        android:textColor="@color/white_my"
        android:background="@drawable/red_backgroud_yuan_jiao_button"
        android:layout_marginTop="10dp"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/text_also_find_by_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/find_password_font_size"
        android:text="@string/alse_find_by_email"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        />
</LinearLayout>