<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <!--头部-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_my"
        android:layout_marginBottom="2dp">
        <ImageView
            android:id="@+id/img_dao_hang_find_by_email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/leftdaohang"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_email"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:textSize="@dimen/dao_hang_base_font"
            />
    </RelativeLayout>

    <!--邮箱-->
    <EditText
        android:id="@+id/edit_email_num_find_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_email_number"
        android:textSize="@dimen/find_password_font_size"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>


    <TextView
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_password_by_email_tips"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_next_step_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:textSize="@dimen/find_password_font_size"
        android:textColor="@color/white_my"
        android:background="@drawable/red_backgroud_yuan_jiao_button"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/text_also_find_by_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/find_password_font_size"
        android:text="@string/alse_find_by_phone"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        />
</LinearLayout>